[package]
name = "pa-updater"
version = "0.1.1"
authors = ["Toa Toastrejn <toa@toaaa.de>"]
edition = "2021"
description = "Official Installer and Updater for Project-Apparatus, a Lethal Company cheat based on Infinite Company."
repository = "https://github.com/toaaa/pa-updater"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.7"
zip = "0.6.6"